--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,17 @@
       </p>
     </section>
     <section>
+      <h2>Learning CSS</h2>
+      <p>
+        <span class="newthought">Web development has been painful.</span>
+        I'm trying to make a really good website.
+        But let's be honest.
+        It is gonna be trash for a bit.
+        I'll post little things I learn to <a href="learning-css.html">Learning CSS</a>
+      </p>
+    </section>
+
+    <section>
       <h2> Interesting Links</h2>
       <p>Other sites that I found interesting...</p>
       <ul>
@@ -131,6 +142,7 @@
         <li><a href="https://webglfundamentals.org/">WebGL Fundimentals</a>: has super cool pipeline visual</li>
       </ul>  
     </section>
+    
 
     <section>
       <h2>Notable Plots</h2>
