css section and blender section

--- a/public/index.html
+++ b/public/index.html
@@ -128,8 +128,14 @@
         It is gonna be trash for a bit.
         I'll post little things I learn to <a href="learning-css.html">Learning CSS</a>
       </p>
-    </section>
 
+    <section>
+      <h2>Learning Blender</h2>
+      <p>
+        <span class="newthought">I wanna learn Blender.</span>
+        I'll post little things I learn to <a href="learning-blender.html">Learning Blender</a>
+      </p>
+    </section>
     <section>
       <h2> Interesting Links</h2>
       <p>Other sites that I found interesting...</p>
