--- a/public/learning-css.html
+++ b/public/learning-css.html
@@ -3,14 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="styles/style.css"
-    rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Math&display=swap" rel="stylesheet">
+    <link href="styles/layers.css" rel="stylesheet" />
     <title>Learning CSS</title>
   </head>
   <body>
@@ -28,38 +21,134 @@
         So arrow boxes are cool.
         Check out <a href="https://cssarrowplease.com/">the arrow box generator.</a>
       </p>
-      <style>
-        .arrow_box {
-          position: relative;
-          background: #88b7d5;
-          border: 4px solid #c2e1f5;
-        }
-        .arrow_box:after, .arrow_box:before {
-          left: 100%;
-          top: 50%;
-          border: solid transparent;
-          content: "";
-          height: 0;
-          width: 0;
-          position: absolute;
-          pointer-events: none;
-        }
+      <pre>
+        <code>
+          .arrow_box {
+            position: relative;
+            background: #88b7d5;
+            border: 4px solid #c2e1f5;
+          }
+          .arrow_box:after, .arrow_box:before {
+            left: 100%;
+            top: 50%;
+            border: solid transparent;
+            content: "";
+            height: 0;
+            width: 0;
+            position: absolute;
+            pointer-events: none;
+          }
+      
+          .arrow_box:after {
+            border-color: rgba(136, 183, 213, 0);
+            border-left-color: #88b7d5;
+            border-width: 40px;
+            margin-top: -40px;
+          }
+          .arrow_box:before {
+            border-color: rgba(194, 225, 245, 0);
+            border-left-color: #c2e1f5;
+            border-width: 46px;
+            margin-top: -46px;
+          }
+        </code>
+      </pre>
+    </section>
 
-        .arrow_box:after {
-          border-color: rgba(136, 183, 213, 0);
-          border-left-color: #88b7d5;
-          border-width: 40px;
-          margin-top: -40px;
-        }
-        .arrow_box:before {
-          border-color: rgba(194, 225, 245, 0);
-          border-left-color: #c2e1f5;
-          border-width: 46px;
-          margin-top: -46px;
-        }
-      </style>
+    <section>
+      <h2>Inheritence and Cascade</h2>
+      <p>
+        <abbr>CSS</abbr> stands for <strong>Cascading Style Sheets</strong>, and the first word
+        <em>cascading</em> is stupidly complicated to understand yet at the same time is pretty
+        simple.
+      </p>
+      <blockquote cite="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Cascade_and_inheritance#conflicting_rules"  >
+        <p>
+          Stylesheets cascade — at a very simple level, this means that the origin, the cascade layer, and the order of CSS rules matter. When two rules from the same cascade layer apply and both have equal specificity, the one that is defined last in the stylesheet is the one that will be used.
+        </p>
+        <footer><cite><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Cascade_and_inheritance#conflicting_rules">MDN Docs</a></cite></footer>
+      </blockquote>
+      <p>
+        <strong>Inheritence</strong> is also kind of weird. Some properties are inherited from parent elements while others are not. 
+        For example, <code>color</code> and <code>font-family</code> are inherited values, but <code>width</code> is not.
+        You can control inheritence by setting a property value to something like <code>inherit</code>, which turns on inheritence.
+        <code>initial </code> sets the value to the initial value of the CSS specification.
+        <code>revert</code> sets the value to the browser default. 
+        <code>unset</code> acts like <code>revert</code>, except that if the property usually inherits it will inherit.
+        Finally, <code>revert-layer</code>, resets the property value to one defined in a previous cascade layer (which is its own whole thing).
+      </p>
+      <p>
+        The property value <code>all</code> lets you use the above inheritence values be applied to all properties at once!
+      </p>
+    </section>
+    <section>
+      <h2>Cascade Layers and Nested Cascade Layers</h2>
+      <p>
+        I'm learning about cascade layers.
+        The issues that they can solve are that if you have a bunch of styles
+        coming from different sources causes conflicts. Importing each source into 
+        its own layer however lets you organize and balance the sources.
+        <label for="sn-cascade"
+          class="margin-toggle sidenote-number">
+        </label>
+        <input type="checkbox"
+          id="sn-cascade"
+          class="margin-toggle"/>
+       <span class="sidenote">
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Cascade_layers#issues_cascade_layers_can_solve">
+          MDN Docs:Issues cascade layers can solve
+        </a>
+       </span>
+      </p>
+      <p>
+        Nested cascade layers solve another problem. Within a layer,
+        an author can define sub layers that can be ordered (determines precidence)
+        based on stuff like viewport size. This is essentially a way to create 
+        themes, component libaries, frameworks, and thirdparty widgets.
+        <label for="sn-cascade-sub"
+          class="margin-toggle sidenote-number">
+        </label>
+        <input type="checkbox"
+          id="sn-cascade-sub"
+          class="margin-toggle"/>
+       <span class="sidenote">
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Cascade_layers#issues_nested_cascade_layers_can_solve">
+          MDN Docs:Issues cascade layers can solve
+        </a>
+       </span>
+      </p>
     </section>
   </article>
   </body>
+  <style>
+    .arrow_box {
+      position: relative;
+      background: #88b7d5;
+      border: 4px solid #c2e1f5;
+    }
+    .arrow_box:after, .arrow_box:before {
+      left: 100%;
+      top: 50%;
+      border: solid transparent;
+      content: "";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+    }
+
+    .arrow_box:after {
+      border-color: rgba(136, 183, 213, 0);
+      border-left-color: #88b7d5;
+      border-width: 40px;
+      margin-top: -40px;
+    }
+    .arrow_box:before {
+      border-color: rgba(194, 225, 245, 0);
+      border-left-color: #c2e1f5;
+      border-width: 46px;
+      margin-top: -46px;
+    }
+  </style>
 </html>
   
