--- a/public/learning-blender.html
+++ b/public/learning-blender.html
@@ -30,6 +30,19 @@
         <img src="images/silly_cube.png">
       </figure>
     </section>
+    <section>
+      <h2>Grease Pencil</h2>
+      <figure>
+        <label for="mn-herp-pikachu" class="margin-toggle">&#8853;</label>
+        <input type="checkbox" id="mn-herp-pikachu" class="margin-toggle"/>
+        <span class="marginnote">
+          <a href="models/herp_pikachued.blend">A herp derp pikachu</a>. 
+          I've been following <a href="https://www.youtube.com/watch?v=-fvMEkN3MOY">this cool tutorial by Bryson McBee</a>. 
+          This is just the first part of it. Progress is a slow thing.
+        </span>
+        <img src="images/herp-pikachu.png">
+      </figure>
+    </section>
   </article>
   </body>
 </html>
