added learning css and business card

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
     <section>
       <h1> Welcome to My Homepage!</h1>
       <p class="subtitle">Hannah Maeve Andersen</p>
-      <figure>
-        
+      <figure>  
         <label for="jarjar" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="jarjar" class="margin-toggle"/>
         <span class="marginnote">
@@ -146,6 +145,7 @@
         <li><a href="https://www.flyde.dev/">flyde</a>, a visual programming tool</li>
         <li><a href="https://aframe.io/"> AFrame</a>: WebGL using only html</li>
         <li><a href="https://webglfundamentals.org/">WebGL Fundimentals</a>: has super cool pipeline visual</li>
+        <li><a href="https://necolas.github.io/normalize.css/">Normalize.css</a>: Normalizes CSS to make things look consistent.</li>
       </ul>  
     </section>
     
